--- a/css/canitabs.css
+++ b/css/canitabs.css
@@ -76,6 +76,7 @@ a:hover{ text-decoration: none; }
 ul{ list-style: none;padding: 0;margin: 0; }
 section{ width: 100%; }
 p{ padding: 0; margin: 0;}
+.harabara{ font-family: 'HARABARA' !important;}
 /* BUTTON */
 .btn-default{ border: 1px solid #0299CC; background: transparent;padding: .5rem 1.6rem; color: #0299CC; font-weight: bold }
 .btn-default:hover{ background: #0299CC ;color: #fff; font-weight: bold }
