--- a/css/canitabs.css
+++ b/css/canitabs.css
@@ -255,6 +255,14 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     background-position-x: 65%;*/
     overflow: hidden;
 }
+#content-huesos {
+    width: 100%;
+    height: 180%;
+    /*background: #ccc;*/
+    top: -10rem;
+    position: absolute;
+    z-index: 99;
+}
 #section_1 img.dog {
     width: 28rem;
     position: relative;
@@ -302,6 +310,9 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 /*******************************************************/
 #section_2 {
     padding: 2.5rem 1.5rem;
+    position: relative;
+    z-index: 999;
+    background: #fff;
 }
 #section_2 .col-3 {
     margin-right: 8rem;
@@ -329,6 +340,12 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     z-index: 999;
     bottom: -1.4rem;
     left: 6rem;
+}
+#section_2 .arrow-ani img {
+    position: absolute;
+    left: 7rem;
+    top: 10rem;
+    width: 84%;
 }
 #section_2 .downloads {     background: url(../img/icons_downloads.png) no-repeat;
     background-size: 4.3rem;
@@ -404,13 +421,24 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     position: absolute;
     bottom: 2rem;
 }
-#section_3 .box .item { text-align: center; margin-left: -2rem;}
-#section_3 .box .item:first-child { padding: 0; }
-#section_3 .box .item img{ width: 10rem; }
-#section_3 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
-#section_3 ul li { padding: .6rem 0; }
+#section_3 .box .item {     text-align: center;
+    /* margin-left: -2rem; */
+    /* float: left; */
+    width: 57%;
+    position: absolute;}
+#section_3 .item h6 {    font-size: .7rem;    width: 100%;}
+#section_3 .box .item:last-child {
+    left: 8rem;
+}
+#section_3 .box .item img{ width: 150%; }
+#section_3 ul { font-family: 'MENTONE-SEMIBOL';
+    font-size: .8rem;    
+    position: relative;
+    right: -3rem;
+    top: 1rem; }
+#section_3 ul li { padding: .4rem 0;transform: scale(.8); }
 #section_3 ul li .icon { padding: 0; text-align: center; }
-#section_3 ul hr { width: 90%; margin: 0;}
+#section_3 ul hr {     width: 89%;    margin: 0;    margin-left: .8rem;}
 #section_3 ul li img{
     transform: scale(.8);
 }
@@ -455,17 +483,32 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     z-index: 99;
     width: 30%;
 }
+#section_4 .description{
+    width: 50%;
+    margin: auto;
+}
 #section_4 .box{
     position: absolute;
     bottom: 5rem;
 }
+#section_4 .box .description {
+    position: absolute;
+    width: 15rem;
+    background-color: #FCD461;
+    border: 1px solid #737373;
+    padding: 1rem 1rem 1rem 2.5rem;
+    border-radius: 1rem;
+    text-align: left;
+    top: 4.5rem;
+    left: 8.5rem;
+}
 #section_4 .box .item { text-align: center; margin-left: -2rem;}
 #section_4 .box .item:first-child { padding: 0; }
-#section_4 .box .item img{ width: 12rem; }
-#section_4 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
-#section_4 ul li {line-height: 2.5rem; }
+#section_4 .box .item img{ width: 12rem;    position: relative;    z-index: 999; }
+#section_4 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 2rem;    left: 2rem; }
+#section_4 ul li {line-height: 2.5rem;transform: scale(.8); }
 #section_4 ul li .icon { padding: 0; text-align: center; }
-#section_4 ul hr { width: 90%; margin: 0;}
+#section_4 ul hr { width: 81%;    margin: 0;    margin-left: 1.5rem;}
 #section_4 ul li img{
     transform: scale(.8);
 }
@@ -533,7 +576,7 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 #section_5 img.cat {
     position: relative;
     bottom: -4rem;
-    left: -1.5rem;
+    left: -8.5rem;
     z-index: 99;
     width: 15rem;
 }
@@ -543,14 +586,12 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 }
 #section_5 .box .item { text-align: center; margin-left: -2rem;}
 #section_5 .box .item:first-child { padding: 0; }
-#section_5 .box .item img{ width: 10rem; }
-#section_5 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
-#section_5 ul li {line-height: 1rem; padding: 1rem 0;}
+#section_5 .box .item img{ width: 10rem; position: relative;    top: -2rem;}
+#section_5 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .7rem;    position: relative;    bottom: -3rem; }
+#section_5 ul li {line-height: 1rem; padding: .5rem 0; transform: scale(.8);}
 #section_5 ul li .icon { padding: 0; text-align: center; }
 #section_5 ul hr { width: 90%; margin: 0;}
-#section_5 ul li img{
-    transform: scale(.8);
-}
+#section_5 ul li img{    transform: scale(.9);}
 #section_5 .downloads {
     background: url('../img/icons_downloads_green.png') no-repeat;
     padding: .7rem .95rem;
@@ -588,21 +629,21 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 #section_6 .box .item { text-align: center; margin-left: -2rem;}
 #section_6 .box .item:first-child { padding: 0; }
 #section_6 .box .item img{ width: 11rem; }
-#section_6 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
-#section_6 ul li {line-height: 2.5rem;    padding: .5rem 0;}
+#section_6 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;      position: relative;    top: 3rem;   }
+#section_6 ul li {line-height: 2.5rem;    padding: .5rem 0;transform: scale(.8);}
 #section_6 ul li .icon { padding: 0; text-align: center; }
-#section_6 ul hr { width: 90%; margin: 0;}
+#section_6 ul hr {     width: 82%;    margin: 0;    margin-left: 1rem;}
 #section_6 ul li img{
     transform: scale(.8);
 }
 #section_6 .downloads {
     background: url('../img/icons_downloads_green_v2.png') no-repeat;
-    padding: .7rem .95rem;
+    padding: .7rem .85rem;
     margin: 0 6px; }
-#section_6 .downloads.pdf { background-position: 0 -2.5rem }
-#section_6 .downloads.pdf:hover { background-position: 0 -.1rem }
-#section_6 .downloads.video { background-position: -2.1rem -2.4rem;    padding: .7rem 1.5rem;    margin: 0;}
-#section_6 .downloads.video:hover { background-position:  -2.2rem -.1rem;  }
+#section_6 .downloads.pdf { background-position: 0 -2.2rem }
+#section_6 .downloads.pdf:hover { background-position: 0 0rem }
+#section_6 .downloads.video {    background-position: -1.9rem -2.2rem;    padding: .7rem 1.1rem;  margin: 0;}
+#section_6 .downloads.video:hover { background-position:  -1.9rem 0rem;  }
 
 @media(max-width: 768px){
     #section_6 .description { width: 100% !important; }
@@ -627,11 +668,11 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     width: 38%;
     margin: auto;
 }
-#section_7 .box .item { text-align: center; margin-left: -2rem;}
+#section_7 .box .item { text-align: center; margin-left: -4rem;}
 #section_7 .box .item:first-child { padding: 0; }
 #section_7 .box .item img{ width: 11rem; }
-#section_7 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
-#section_7 ul li {    line-height: 2rem;    padding: .5rem 0;}
+#section_7 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 6rem; }
+#section_7 ul li {    line-height: 2.4rem;    padding: .3rem 0;    transform: scale(.9);}
 #section_7 ul li .icon { padding: 0; text-align: center; }
 #section_7 ul hr { width: 90%; margin: 0;}
 #section_7 ul li img{
@@ -639,12 +680,12 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 }
 #section_7 .downloads {
     background: url('../img/icons_downloads_purple.png') no-repeat;
-    padding: .7rem .95rem;
+    padding: .7rem .9rem;
     margin: 0 6px; }
-#section_7 .downloads.pdf { background-position: 0 -2.5rem }
-#section_7 .downloads.pdf:hover { background-position: 0 -.1rem }
-#section_7 .downloads.video { background-position: -2.1rem -2.4rem;    padding: .7rem 1.5rem;    margin: 0;}
-#section_7 .downloads.video:hover { background-position:  -2.2rem -.1rem;  }
+#section_7 .downloads.pdf { background-position: 0 -2.4rem }
+#section_7 .downloads.pdf:hover { background-position: 0 0rem }
+#section_7 .downloads.video { background-position: -2rem -2.2rem;    padding: .7rem 1.5rem;    margin: 0;}
+#section_7 .downloads.video:hover { background-position:  -2rem .15rem;  }
 
 @media(max-width: 768px){
     #section_7 .description {width: 100%;}
@@ -661,8 +702,8 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 }
 #section_8 img.three {
     position: absolute;
-    right: 2rem;
-    top: 8rem;
+    right: 8rem;
+    top: 6rem;
     z-index: 9;
     width: 19rem;
 }
@@ -677,8 +718,8 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 #section_8 .box .item { text-align: center; margin-left: -2rem;}
 #section_8 .box .item:first-child { padding: 0; }
 #section_8 .box .item img.frasco{ width: 12rem; }
-#section_8 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
-#section_8 ul li {    line-height: 1rem;    padding: .5rem 0;}
+#section_8 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .9rem; position: relative;    top: 4rem;}
+#section_8 ul li {    line-height: 1rem;    padding: .5rem 0;transform: scale(.9);}
 #section_8 ul li .icon { padding: 0; text-align: center;position: relative;    left: -.5rem;    z-index: 999; }
 #section_8 ul hr { width: 90%; margin: 0;}
 #section_8 ul li img{
@@ -686,12 +727,12 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 }
 #section_8 .downloads {
     background: url('../img/icons_downloads_red.png') no-repeat;
-    padding: .7rem .95rem;
+    padding: .6rem .85rem;
     margin: 0 6px; }
-#section_8 .downloads.pdf { background-position: 0 -2.5rem }
-#section_8 .downloads.pdf:hover { background-position: 0 -.1rem }
-#section_8 .downloads.video { background-position: -2.1rem -2.4rem;    padding: .7rem 1.5rem;    margin: 0;}
-#section_8 .downloads.video:hover { background-position:  -2.2rem -.1rem;  }
+#section_8 .downloads.pdf { background-position: 0 -2.2rem ;}
+#section_8 .downloads.pdf:hover { background-position: 0 0rem }
+#section_8 .downloads.video { background-position: -1.9rem -2.2rem;    padding-right: 1.4rem;    margin: 0;}
+#section_8 .downloads.video:hover { background-position:  -1.9rem .1rem;  }
 
 #section_8 .characters {
     zoom: .8;
@@ -717,7 +758,7 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     font-family: 'HelveticaNeueLTStd-Lt';
     font-size: .8rem;
     line-height: 2rem;
-    padding-left: 9px;
+    /*padding-left: 9px;*/
 }
 
 /*#section_8 .bubbles .row:nth-child(1) { margin-left: 1rem; }*/
@@ -734,13 +775,12 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 /*******************************************************/
 /*                      SECTION 9                      */
 /*******************************************************/
-#section_9 { padding-top: 5rem; } 
+#section_9 { padding-top: 10rem; } 
 #section_9 .frascos { text-align: center }
 #section_9 .frascos img{ max-width: 8rem;  margin-left: -2.5rem; transition: ease all .2s; cursor: pointer;}
 #section_9 .frascos img:hover {transform: scale(1.1);} 
 #section_9 .frascos img:nth-child(even){ margin-top: -1rem;}
 #section_9 .tags {
-    margin-top: 3rem;
     margin-bottom: 3rem;
 }
 #section_9 .tags .text {
@@ -754,6 +794,9 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     width: 3rem;
     float: left;
 }
+#section_9 .tags .icon img {
+    width: 85%;
+}
 #section_9 .btn .text {
     float: right;
     width: 59%;
@@ -763,6 +806,14 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 #section_9 .btn img.icon {
     float: left;
     width: 3rem;
+}
+#section_9 img.hueso {
+    position: relative;
+    top: -2rem;
+    left: 2rem;
+}
+#section_9 .tags .wow {
+    padding: 0;
 }
 @media(max-width: 768px){
     #section_9 .tags .text { padding-left: 10px; }
@@ -784,8 +835,46 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 @media(max-width: 768px){
     #section_10 { padding-bottom: 5rem; }
 }
+
+/* FLOATING BUTTONs */
+.floating-buttons .btn.btn-chat{
+    background: #0299CC;
+    color: #fff;
+    padding: .6rem 1.3rem;
+    position: fixed;
+    left: -2rem;
+    top: 50%;
+    transform: rotate(-90deg);
+}
+.floating-buttons .btn.btn-buy{
+    background: #029999;
+    color: #fff;
+    padding: .5rem 2rem;
+    position: fixed;
+    right: -3.5rem;
+    top: 50%;
+    transform: rotate(-90deg);
+    z-index: 999;
+}
+.floating-buttons .btn.btn-buy:hover,
+.floating-buttons .btn.btn-chat:hover{    background: #999999;}
+.floating-buttons .btn.btn-buy img { width: 2rem; }
+.floating-buttons .btn.btn-chat img.icon {      width: .9rem;    margin-top: -1rem;}
+.floating-buttons .btn.btn-chat .text{
+    width: 2.4rem;
+    float: left;
+    font-weight: bold;
+}
+.floating-buttons .btn.btn-buy .text{
+    width: 4.4rem;
+    text-align: left;
+    line-height: 17px;
+    font-weight: bold;
+    float: left;
+}
+
 /*******************************************************/
-/*                      FOOTER 4                       */
+/*                      FOOTER                         */
 /*******************************************************/
 .footer{
     background-color: #EDEDED;
