--- a/css/canitabs.css
+++ b/css/canitabs.css
@@ -85,7 +85,7 @@ p{ padding: 0; margin: 0;}
 .btn-default.inverse:hover{ border: 1px solid #0299CC; background: transparent;padding: .5rem 1.6rem; color: #0299CC; font-weight: bold }
 
 .btn-orange{font-size: .8rem; border: 1px solid #FF9933; background: transparent;padding: .4rem 1.4rem; color: #FF9933; font-weight: bold }
-.btn-orange:hover{font-size: .8rem; background: #FF9933 ; color: #fff; font-weight: bold }
+.btn-orange:hover, .btn-orange.active{font-size: .8rem; background: #FF9933 ; color: #fff; font-weight: bold }
 
 .btn-yellow{font-size: .8rem; border: 1px solid #FECC33; background: transparent;padding: .4rem 1.4rem; color: #FECC33; font-weight: bold }
 .btn-yellow:hover{font-size: .8rem; background: #FECC33 ; color: #fff; font-weight: bold }
@@ -116,6 +116,8 @@ p{ padding: 0; margin: 0;}
 .green-v2-color{ color: #009A9A !important; }
 .purple-color{ color: #AA66D0 !important; }
 .red-color{ color: #B40068 !important; }
+
+.slide-hide { height: 0; overflow: hidden; } 
 
 .customcheck {
     display: block;
@@ -174,6 +176,34 @@ p{ padding: 0; margin: 0;}
 }
 
 .copy{ font-style: normal !important; font-size: .9rem; position: absolute; }
+#btn-top {
+    display: inline-block;
+    background: #FF9800 url('../img/arrow_up.png') no-repeat center;
+    background-size: 2rem;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border-radius: 4px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    transition: background-color .3s, 
+      opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+  }
+  #btn-top:hover {
+    cursor: pointer;
+    background-color: #333;
+  }
+  #btn-top:active {
+    background-color: #555;
+  }
+  #btn-top.show {
+    opacity: 1;
+    visibility: visible;
+  }
 
 section .title{ font-family: 'HARABARA'; font-size: 3rem; margin: 0 }
 section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
@@ -418,8 +448,8 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 }
 /*#section_3 .box img{ max-width: 100%; }*/
 #section_3 .box{
-    position: absolute;
-    bottom: 2rem;
+    position: relative;
+    top: 6rem;
 }
 #section_3 .box .item {     text-align: center;
     /* margin-left: -2rem; */
@@ -434,11 +464,14 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 #section_3 ul { font-family: 'MENTONE-SEMIBOL';
     font-size: .8rem;    
     position: relative;
-    right: -3rem;
-    top: 1rem; }
-#section_3 ul li { padding: .4rem 0;transform: scale(.8); }
-#section_3 ul li .icon { padding: 0; text-align: center; }
-#section_3 ul hr {     width: 89%;    margin: 0;    margin-left: .8rem;}
+    right: -4rem;
+    top: 2rem;
+width: 110%;}
+#section_3 ul li{ padding: .4rem 0;transform: scale(.8); }
+#section_3 ul li:last-child{     position: absolute;    bottom: -2.5rem;    width: 100%;    padding-left: 1rem;}
+#section_3 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
+#section_3 ul li .text {    display: inline-flex;    width: 65%; }
+#section_3 ul hr {     width: 75%;    margin: 0;    margin-left: 2rem;}
 #section_3 ul li img{
     transform: scale(.8);
 }
@@ -488,8 +521,8 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     margin: auto;
 }
 #section_4 .box{
-    position: absolute;
-    bottom: 5rem;
+    position: relative;
+    top: 11rem;
 }
 #section_4 .box .description {
     position: absolute;
@@ -505,10 +538,11 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 #section_4 .box .item { text-align: center; margin-left: -2rem;}
 #section_4 .box .item:first-child { padding: 0; }
 #section_4 .box .item img{ width: 12rem;    position: relative;    z-index: 999; }
-#section_4 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 2rem;    left: 2rem; }
+#section_4 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 4rem;    left: 8rem;    width: 80%;}
 #section_4 ul li {line-height: 2.5rem;transform: scale(.8); }
-#section_4 ul li .icon { padding: 0; text-align: center; }
-#section_4 ul hr { width: 81%;    margin: 0;    margin-left: 1.5rem;}
+#section_4 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
+#section_4 ul li .text {    display: inline-flex;    width: 65%; }
+#section_4 ul hr {         width: 69%;    margin: 0;    margin-left: 3.5rem;}
 #section_4 ul li img{
     transform: scale(.8);
 }
@@ -581,16 +615,17 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     width: 15rem;
 }
 #section_5 .box{
-    position: absolute;
-    bottom: -4rem;
+    position: relative;
+    top: 6rem;
 }
 #section_5 .box .item { text-align: center; margin-left: -2rem;}
 #section_5 .box .item:first-child { padding: 0; }
 #section_5 .box .item img{ width: 10rem; position: relative;    top: -2rem;}
 #section_5 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .7rem;    position: relative;    bottom: -3rem; }
-#section_5 ul li {line-height: 1rem; padding: .5rem 0; transform: scale(.8);}
-#section_5 ul li .icon { padding: 0; text-align: center; }
-#section_5 ul hr { width: 90%; margin: 0;}
+#section_5 ul li {line-height: 1rem; padding: .5rem 0;}
+#section_5 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
+#section_5 ul li .text {    display: inline-flex;    width: 65%; }
+#section_5 ul hr {         width: 75%;    margin: 0;    margin-left: 1rem;}
 #section_5 ul li img{    transform: scale(.9);}
 #section_5 .downloads {
     background: url('../img/icons_downloads_green.png') no-repeat;
@@ -629,10 +664,11 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 #section_6 .box .item { text-align: center; margin-left: -2rem;}
 #section_6 .box .item:first-child { padding: 0; }
 #section_6 .box .item img{ width: 11rem; }
-#section_6 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;      position: relative;    top: 3rem;   }
-#section_6 ul li {line-height: 2.5rem;    padding: .5rem 0;transform: scale(.8);}
-#section_6 ul li .icon { padding: 0; text-align: center; }
-#section_6 ul hr {     width: 82%;    margin: 0;    margin-left: 1rem;}
+#section_6 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;      position: relative;    top: 3rem; width: 92%;  }
+#section_6 ul li {line-height: 1rem;    padding: .5rem 0;transform: scale(.8);}
+#section_6 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
+#section_6 ul li .text {    display: inline-flex;    width: 65%; }
+#section_6 ul hr {         width: 70%;    margin: 0;    margin-left: 3rem;}
 #section_6 ul li img{
     transform: scale(.8);
 }
@@ -661,8 +697,8 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     width: 18rem;
 }
 #section_7 .box{
-    position: absolute;
-    bottom: 3rem;
+    position: relative;
+    top: 6rem;
 }
 #section_7 .description {
     width: 38%;
@@ -672,9 +708,10 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 #section_7 .box .item:first-child { padding: 0; }
 #section_7 .box .item img{ width: 11rem; }
 #section_7 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 6rem; }
-#section_7 ul li {    line-height: 2.4rem;    padding: .3rem 0;    transform: scale(.9);}
-#section_7 ul li .icon { padding: 0; text-align: center; }
-#section_7 ul hr { width: 90%; margin: 0;}
+#section_7 ul li {    line-height: 1rem;    padding: .3rem 0;    transform: scale(.9);}
+#section_7 ul li .icon {     width: 18%;    display: inline-block;    text-align: center; }
+#section_7 ul li .text {    display: inline-flex;    width: 75%; }
+#section_7 ul hr {         width: 70%;    margin: 0;    margin-left: 3rem;}
 #section_7 ul li img{
     transform: scale(.8);
 }
@@ -708,8 +745,8 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     width: 19rem;
 }
 #section_8 .box{
-    position: absolute;
-    bottom: 3rem;
+    position: relative;
+    top: 6rem;
 }
 #section_8 .description {
     width: 38%;
@@ -720,8 +757,9 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 #section_8 .box .item img.frasco{ width: 12rem; }
 #section_8 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .9rem; position: relative;    top: 4rem;}
 #section_8 ul li {    line-height: 1rem;    padding: .5rem 0;transform: scale(.9);}
-#section_8 ul li .icon { padding: 0; text-align: center;position: relative;    left: -.5rem;    z-index: 999; }
-#section_8 ul hr { width: 90%; margin: 0;}
+#section_8 ul li .icon {     width: 18%;    display: inline-block;    text-align: center; }
+#section_8 ul li .text {    display: inline-flex;    width: 75%; }
+#section_8 ul hr {         width: 70%;    margin: 0;    margin-left: 3rem;}
 #section_8 ul li img{
     transform: scale(.8);
 }
@@ -939,7 +977,7 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 }
 .footer .address a{ color: #868686; }
 .sprite_layout {
-    background-image: url(https://www.agrovetmarket.com/images/ref/png/layout.png);
+    background-image: url(../img/layout.png);
     background-color: transparent;
     background-repeat: no-repeat;
 }
