--- a/css/canitabs.css
+++ b/css/canitabs.css
@@ -74,7 +74,7 @@
 
 a:hover{ text-decoration: none; }
 ul{ list-style: none;padding: 0;margin: 0; }
-section{ width: 100%; }
+section{ width: 100%;}
 p{ padding: 0; margin: 0;}
 .harabara{ font-family: 'HARABARA' !important;}
 /* BUTTON */
@@ -117,7 +117,20 @@ p{ padding: 0; margin: 0;}
 .purple-color{ color: #AA66D0 !important; }
 .red-color{ color: #B40068 !important; }
 
+.modal-body {    padding: 0;    box-shadow: 0 5px 2rem #383838;}
+a.btn.btn-close {    position: absolute;    bottom: -1.7rem;    left: 44%;    background: #313131;    color: #fff;    font-size: 10px;    width: 7rem;}
+
+.show-more-click,
+.show-more-items { font-family: 'Helvetica'; }
+
 .slide-hide { height: 0; overflow: hidden; } 
+.copyright {
+    font-size: 13px;
+    position: relative;
+    top: -6px;
+    margin-right: 5px;
+}
+.pl-1_25{ padding-left: 5px; }
 
 .customcheck {
     display: block;
@@ -206,7 +219,7 @@ p{ padding: 0; margin: 0;}
   }
 
 section .title{ font-family: 'HARABARA'; font-size: 3rem; margin: 0 }
-section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
+section .description{ font-family: 'HelveticaNeueLTStd-Bd'; font-size: .8rem; }
 @media( max-width: 768px){
     section .title { font-size: 2rem; }
 }
@@ -216,7 +229,7 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 /*******************************************************/
 #navbar-principal{
     background-color: #0099cc;
-    position: relative;
+    /*position: relative;*/
     z-index: 9999999;
 }
 #navbar-principal .navbar-brand img{
@@ -238,6 +251,7 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 /***    productos hover list in navbar-principal    ***/
 #products-list-navbar {
     position: absolute;
+    top: 3.6rem;
     width: 100%;
     background: rgba(130, 212, 212, 0.86);
     z-index: 99999999;
@@ -278,7 +292,8 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 /*                      SECCION 1                      */
 /*******************************************************/
 #section_1 {
-    height: 39.5rem;
+    margin-top: 4rem;
+    height: 40rem;
     /*background-image: url('../img/intro_perro.png');
     background-repeat: no-repeat;
     background-size: 40rem;
@@ -298,7 +313,7 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
     position: relative;
     top: 3rem;
     left: -5rem;
-    z-index: 9999999;
+    z-index: 1040   ;
 }
 #section_1 .title { color: #EE009D; font-family: 'HelveticaNeueLTStd-Bd'; font-size: 3rem; line-height: 3rem; }
 #section_1 .sub_title { color: #009ACF;font-family: 'HelveticaNeueLTStd-Bd'; font-size: 1.6rem; }
@@ -379,12 +394,11 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 }
 #section_2 .downloads {     background: url(../img/icons_downloads.png) no-repeat;
     background-size: 4.3rem;
-    padding: .6rem 1.2rem;
-    margin: 0 6px; }
-#section_2 .downloads.pdf { background-position: .6rem  0 }
-#section_2 .downloads.pdf:hover { background-position: .6rem  -2.5rem }
-#section_2 .downloads.video { background-position: -2rem  0 }
-#section_2 .downloads.video:hover { background-position: -2rem  -2.5rem }
+    margin: 0 2px; }
+#section_2 .downloads.pdf { background-position: 2px 0;    padding: 6px 27px 12px 3px; }
+#section_2 .downloads.pdf:hover { background-position:2px  -42px }
+#section_2 .downloads.video {         background-position: -32px 0;    padding: 6px 30px 11px 7px; margin-left: -2px;}
+#section_2 .downloads.video:hover { background-position: -32px  -42px }
 #section_2::after{
     content: ' ';
     width: 0;
@@ -431,7 +445,7 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .8rem; }
 /*                      SECCION 3                      */
 /*******************************************************/
 #section_3 {
-    padding: 4rem 0;
+    padding: 4rem 0 7rem 0;
 }
 #section_3 img.dog {
     position: absolute;
@@ -504,6 +518,9 @@ width: 110%;}
 /*******************************************************/
 /*                      SECCION 4                      */
 /*******************************************************/
+#section_4 {
+    padding: 0 0 3rem 0;
+}
 #section_4 img.dog {
     position: relative;
     max-width: 100%;
@@ -511,7 +528,7 @@ width: 110%;}
 }
 #section_4 img.medall {
     position: absolute;
-    right: 0;
+    right: 2rem;
     top: 11rem;
     z-index: 99;
     width: 30%;
@@ -533,12 +550,12 @@ width: 110%;}
     border-radius: 1rem;
     text-align: left;
     top: 4.5rem;
-    left: 8.5rem;
+    left: 0.5rem;
 }
 #section_4 .box .item { text-align: center; margin-left: -2rem;}
 #section_4 .box .item:first-child { padding: 0; }
-#section_4 .box .item img{ width: 12rem;    position: relative;    z-index: 999; }
-#section_4 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 4rem;    left: 8rem;    width: 80%;}
+#section_4 .box .item img{ width: 12rem;    position: relative;    z-index: 999;    left: -8rem; }
+#section_4 ul { font-family: 'MENTONE-SEMIBOL'; font-size: .8rem;position: relative;    top: 4rem;       width: 80%;}
 #section_4 ul li {line-height: 2.5rem;transform: scale(.8); }
 #section_4 ul li .icon {     width: 30%;    display: inline-block;    text-align: center; }
 #section_4 ul li .text {    display: inline-flex;    width: 65%; }
@@ -548,7 +565,7 @@ width: 110%;}
 }
 #section_4 .downloads {
     background: url('../img/icons_downloads_yellow.png') no-repeat;
-    padding: .7rem 1rem;
+    padding: 8px 14px 12px 15px;
     margin: 0 6px; }
 #section_4 .downloads.pdf { background-position: 0 -2.5rem }
 #section_4 .downloads.pdf:hover { background-position: 0 -.1rem }
@@ -630,11 +647,11 @@ width: 110%;}
 #section_5 .downloads {
     background: url('../img/icons_downloads_green.png') no-repeat;
     padding: .7rem .95rem;
-    margin: 0 6px; }
-#section_5 .downloads.pdf { background-position: 0 -2.5rem }
-#section_5 .downloads.pdf:hover { background-position: 0 -.1rem }
-#section_5 .downloads.video { background-position: -2.1rem -2.4rem;    padding: .7rem 1.4rem;    margin: 0;}
-#section_5 .downloads.video:hover { background-position:  -2.2rem -.1rem;  }
+    margin: 0 6px;     background-size: 65px;}
+#section_5 .downloads.pdf { background-position:0 -35px }
+#section_5 .downloads.pdf:hover { background-position: 0 0 }
+#section_5 .downloads.video { background-position: -31px -35px;    padding: .7rem 1.4rem;    margin: 0;}
+#section_5 .downloads.video:hover { background-position:  -31px 0px;  }
 
 @media( max-width: 768px){
     #section_5 .box { position: initial;  margin-top: 4rem;}    
@@ -644,7 +661,7 @@ width: 110%;}
 /*                      SECCION 6                      */
 /*******************************************************/
 #section_6 {
-    padding: 5rem 0;
+    padding: 10rem 0;
 }
 #section_6 img.dog {
     position: absolute;
@@ -673,13 +690,11 @@ width: 110%;}
     transform: scale(.8);
 }
 #section_6 .downloads {
-    background: url('../img/icons_downloads_green_v2.png') no-repeat;
-    padding: .7rem .85rem;
-    margin: 0 6px; }
-#section_6 .downloads.pdf { background-position: 0 -2.2rem }
-#section_6 .downloads.pdf:hover { background-position: 0 0rem }
-#section_6 .downloads.video {    background-position: -1.9rem -2.2rem;    padding: .7rem 1.1rem;  margin: 0;}
-#section_6 .downloads.video:hover { background-position:  -1.9rem 0rem;  }
+    background: url('../img/icons_downloads_green_v2.png') no-repeat; }
+#section_6 .downloads.pdf {     background-position: 0 -38px;    padding: 10px 15px 17px 11px; }
+#section_6 .downloads.pdf:hover { background-position: 0 2px }
+#section_6 .downloads.video {        background-position: -1.9rem -2.2rem;    padding: 12px 10px 13px 26px;    margin: 0;}
+#section_6 .downloads.video:hover {     background-position: -30px 5px;  }
 
 @media(max-width: 768px){
     #section_6 .description { width: 100% !important; }
@@ -691,7 +706,7 @@ width: 110%;}
 /*                      SECCION 7                      */
 /*******************************************************/
 #section_7 {
-    padding: 5rem 0;
+    padding: 5rem 0 7rem 0;
 }
 #section_7 img.dog {
     width: 18rem;
@@ -717,12 +732,12 @@ width: 110%;}
 }
 #section_7 .downloads {
     background: url('../img/icons_downloads_purple.png') no-repeat;
-    padding: .7rem .9rem;
-    margin: 0 6px; }
-#section_7 .downloads.pdf { background-position: 0 -2.4rem }
-#section_7 .downloads.pdf:hover { background-position: 0 0rem }
-#section_7 .downloads.video { background-position: -2rem -2.2rem;    padding: .7rem 1.5rem;    margin: 0;}
-#section_7 .downloads.video:hover { background-position:  -2rem .15rem;  }
+    padding: 8px 13px 11px 12px;
+    margin: 0 6px;     background-size: 59px;}
+#section_7 .downloads.pdf { background-position: 0 -34px }
+#section_7 .downloads.pdf:hover { background-position: 0 1px }
+#section_7 .downloads.video { background-position: -29px -31px;    padding: 10px 15px 11px 20px;    margin: 0;}
+#section_7 .downloads.video:hover { background-position:  -29px .15rem;  }
 
 @media(max-width: 768px){
     #section_7 .description {width: 100%;}
@@ -733,7 +748,8 @@ width: 110%;}
 /*                      SECCION 8                      */
 /*******************************************************/
 #section_8 img.dog {
-    width: 18rem;
+    width: 13rem;
+    left: 5rem;
     position: relative;
     z-index: 99;
 }
@@ -765,12 +781,12 @@ width: 110%;}
 }
 #section_8 .downloads {
     background: url('../img/icons_downloads_red.png') no-repeat;
-    padding: .6rem .85rem;
-    margin: 0 6px; }
-#section_8 .downloads.pdf { background-position: 0 -2.2rem ;}
-#section_8 .downloads.pdf:hover { background-position: 0 0rem }
-#section_8 .downloads.video { background-position: -1.9rem -2.2rem;    padding-right: 1.4rem;    margin: 0;}
-#section_8 .downloads.video:hover { background-position:  -1.9rem .1rem;  }
+    padding: 7px 7px 10px 18px;
+    background-size: 60px; }
+#section_8 .downloads.pdf { background-position: 0 -33px;}
+#section_8 .downloads.pdf:hover { background-position: 0 1px }
+#section_8 .downloads.video { background-position: -28px -33px;    padding-right: 1.4rem;    margin: 0;}
+#section_8 .downloads.video:hover { background-position:  -28px 0;  }
 
 #section_8 .characters {
     zoom: .8;
@@ -790,6 +806,7 @@ width: 110%;}
 #section_8 .item .bubble {
     padding: 0;
 }
+#section_8 .item .bubble img{     transform: scale(.8); }
 #section_8 .item .text {
     text-align: left;
     padding: 0;
@@ -813,20 +830,28 @@ width: 110%;}
 /*******************************************************/
 /*                      SECTION 9                      */
 /*******************************************************/
-#section_9 { padding-top: 10rem; } 
+#section_9 { padding-top: 10rem;    padding-bottom: 4rem; } 
 #section_9 .frascos { text-align: center }
 #section_9 .frascos img{ max-width: 8rem;  margin-left: -2.5rem; transition: ease all .2s; cursor: pointer;}
 #section_9 .frascos img:hover {transform: scale(1.1);} 
 #section_9 .frascos img:nth-child(even){ margin-top: -1rem;}
 #section_9 .tags {
-    margin-bottom: 3rem;
+    margin-bottom: 10rem;
+    margin-left: 6rem;
 }
+#section_9 .tags .tag{
+    width: 20%;
+    float: left;
+}
+#section_9 .tags .tag.dog{ width: 16%; }
+#section_9 .tags .tag.hueso{ width: 22%; }
+#section_9 .tags .tag.cola{ width: 17%; }
+#section_9 .tags .tag.dog-fam{ width: 14%; }
 #section_9 .tags .text {
     font-family: 'HelveticaLTStd-Roman';
     font-size: .8rem;
     width: 56%;
     float: left;
-    padding-left: 8px;
 }
 #section_9 .tags .icon {
     width: 3rem;
@@ -852,6 +877,36 @@ width: 110%;}
 }
 #section_9 .tags .wow {
     padding: 0;
+}
+#section_9 .btn-sc-9 {
+    background: url('../img/buttons_down_modl.png');
+}
+#section_9  .btn-sc-9.brochure {
+    padding: 14px 83px;
+    background-position: 0rem 49px;
+    margin: 0 1rem 0 0;
+}
+#section_9  .btn-sc-9.brochure:hover {
+    background-position: 0rem 0;
+}
+#section_9  .btn-sc-9.tabla {
+    padding: 14px 84px;
+    background-position: -167px 49px;
+}
+#section_9  .btn-sc-9.tabla:hover {
+    background-position: -167px 0;
+}
+#tabla-modal img { cursor: zoom-in}
+#tabla-modal .btn-close{
+    width: 30px;
+    height: 30px;
+    background-color: #545454;
+    color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    padding-bottom: 6px;
 }
 @media(max-width: 768px){
     #section_9 .tags .text { padding-left: 10px; }
