--- a/css/canitabs.css
+++ b/css/canitabs.css
@@ -71,7 +71,9 @@
     font-weight: normal;
     font-style: normal;
 }
-body{ overflow-x: hidden; }
+/*Hidde Scroll in animation huesos - EJE Y*/
+body{ overflow-x: hidden}
+html{ height: 100% }
 a:hover{ text-decoration: none; }
 ul{ list-style: none;padding: 0;margin: 0; }
 section{ width: 100%;}
@@ -293,7 +295,7 @@ section .description{ font-family: 'MENTONE-SEMIBOL'; font-size: .9rem; }
 /*******************************************************/
 #section_1 {
     margin-top: 4rem;
-    height: 100%;
+    height: 93vh;
     /*background-image: url('../img/intro_perro.png');
     background-repeat: no-repeat;
     background-size: 40rem;
@@ -616,7 +618,7 @@ width: 110%;}
 /*                      SECCION 5                      */
 /*******************************************************/
 #section_5 {
-    padding: 6rem 0 0 0;
+    padding: 7rem 0 1rem 0;
 }
 #section_5 img.dog {
     position: absolute;
