--- a/css/canitabs.css
+++ b/css/canitabs.css
@@ -10,7 +10,7 @@
     
 	src: url('../fonts/HelveticaNeueLTStd-Bd.eot');
     src: url('../fonts/HelveticaNeueLTStd-Bd.eot?#iefix') format('embedded-opentype'),
-         /*url('../fonts/Raleway-Black.woff') format('woff'),*/
+         url('../fonts/HelveticaNeueLTStd-Bd.woff') format('woff'),
          url('../fonts/HelveticaNeueLTStd-Bd.otf') format('truetype'),
          url('../fonts/HelveticaNeueLTStd-Bd.svg') format('svg');
     font-weight: bold;
@@ -21,7 +21,7 @@
     
 	src: url('../fonts/HelveticaNeueLTStd-Md.eot');
     src: url('../fonts/HelveticaNeueLTStd-Md.eot?#iefix') format('embedded-opentype'),
-         /*url('../fonts/Raleway-Black.woff') format('woff'),*/
+         url('../fonts/HelveticaNeueLTStd-Md.woff') format('woff'),
          url('../fonts/HelveticaNeueLTStd-Md.otf') format('truetype'),
          url('../fonts/HelveticaNeueLTStd-Md.svg') format('svg');
     font-weight: normal;
@@ -32,7 +32,7 @@
     
 	src: url('../fonts/HelveticaNeueLTStd-Lt.eot');
     src: url('../fonts/HelveticaNeueLTStd-Lt.eot?#iefix') format('embedded-opentype'),
-         /*url('../fonts/Raleway-Black.woff') format('woff'),*/
+         url('../fonts/HelveticaNeueLTStd-Lt.woff') format('woff'),
          url('../fonts/HelveticaNeueLTStd-Lt.otf') format('truetype'),
          url('../fonts/HelveticaNeueLTStd-Lt.svg') format('svg');
     font-weight: light;
@@ -43,7 +43,7 @@
     
 	src: url('../fonts/HARABARA.eot');
     src: url('../fonts/HARABARA.eot?#iefix') format('embedded-opentype'),
-         /*url('../fonts/Raleway-Black.woff') format('woff'),*/
+         url('../fonts/HARABARA.woff') format('woff'),
          url('../fonts/HARABARA.otf') format('truetype'),
          url('../fonts/HARABARA.svg') format('svg');
     font-weight: normal;
@@ -54,7 +54,7 @@
     
 	src: url('../fonts/MENTONE.eot');
     src: url('../fonts/MENTONE.eot?#iefix') format('embedded-opentype'),
-         /*url('../fonts/Raleway-Black.woff') format('woff'),*/
+         url('../fonts/MENTONE.woff') format('woff'),
          url('../fonts/MENTONE.otf') format('truetype'),
          url('../fonts/MENTONE.svg') format('svg');
     font-weight: normal;
@@ -65,7 +65,7 @@
     
 	src: url('../fonts/HelveticaLTStd-Roman.eot');
     src: url('../fonts/HelveticaLTStd-Roman.eot?#iefix') format('embedded-opentype'),
-         /*url('../fonts/Raleway-Black.woff') format('woff'),*/
+         url('../fonts/HelveticaLTStd-Roman.woff') format('woff'),
          url('../fonts/HelveticaLTStd-Roman.otf') format('truetype'),
          url('../fonts/HelveticaLTStd-Roman.svg') format('svg');
     font-weight: normal;
